--- a/hibernate-identifier-web/src/main/resources/application.yml
+++ b/hibernate-identifier-web/src/main/resources/application.yml
@@ -4,13 +4,14 @@ spring:
       connectionTimeout: 20000
       maximumPoolSize: 5
     url: jdbc:postgresql://localhost:5432/company
-    username: postgres
-    password: postgres
+    username: serviceuser
+    password: serviceuser
   jpa:
     show-sql: true
     properties:
       hibernate:
-        format_sql:true
+        format_sql: true
+        default_schema: uofu
     hibernate:
       ddl-auto: update
 
